Image editor is not updateing if in new window #35144

Closed
opened 2013-04-29 13:53:51 +02:00 by Clemens Rudolph · 3 comments

%%%--- Operating System, Graphics card ---

Wn 7 / 2xGeforce 580

- Blender version with error, and version that worked ---

SVN 56372 - built bot

- Short description of error ---

When you watch viewer node in image editor in a new window (duplicate area into new window) it is not beeing uptaded.
When you have another image editor open in the main area or backdrop enabled it works.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • use nodes, add viewer node, render

  • duplicate area into new window

  • change new window to image editor

  • change something in the nodes

  • NO update in the image editor (extra window)

  • enable backdrop

    • update in the extra window is ok

  • switch one of the areas in main window to image editor

    • update in the extra window is ok

%%%

%%%--- Operating System, Graphics card --- Wn 7 / 2xGeforce 580 - Blender version with error, and version that worked --- SVN 56372 - built bot - Short description of error --- When you watch viewer node in image editor in a new window (duplicate area into new window) it is not beeing uptaded. When you have another image editor open in the main area or backdrop enabled it works. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - use nodes, add viewer node, render - duplicate area into new window - change new window to image editor - change something in the nodes - NO update in the image editor (extra window) - enable backdrop - > update in the extra window is ok - switch one of the areas in main window to image editor - > update in the extra window is ok %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev56404. Thanks for the report, closing.%%%

%%%Fixed in svn rev56404. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35144
No description provided.