Fix #35144: Image editor is not updateing if in new window

Was a regression in own optimization on which viewer node to
update -- need to check all the windows' screens, not just
active one.